# hinsight-dashboard-backend

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: routes_demo.py
app/core/: audit.py  logging.py  middleware.py  request_id.py  request_utils.py
docs/: api-standards.md  security-standards.md
docs/decisions/: ADR-0001.md
tests/: test_hinsight.py
